feat: runtime-core

--- a/example/reactivity/computed.html
+++ b/example/reactivity/computed.html
@@ -5,13 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>test-ref</title>
+  <title>test-computed</title>
 </head>
 
 <body>
-  <button>测试</button>
-  <pre></pre>
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./computed.js"></script>
 </body>
 
 </html>
