--- a/example/reactivity/ref.html
+++ b/example/reactivity/ref.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>test-computed</title>
+  <title>test-ref</title>
 </head>
 
 <body>
-  <script type="module" src="./index.js"></script>
+  <button>测试</button>
+  <pre></pre>
+  <script type="module" src="./ref.js"></script>
 </body>
 
 </html>
