fix: petite-vue

--- a/example/petite-vue/index.html
+++ b/example/petite-vue/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+  <div id="app">
+    <template>
+      <div>{{test1}}</div>
+      <div>{{test2}}</div>
+    </template>
+  </div>
   <script src="../../src/petite-vue/index.js" type="module"></script>
 </body>
 
